# Profile

./: .gitignore  CLAUDE.md  README.md  lando_norris_web_analysis.md
portfolio/: .vercelignore  DEPLOY.md  DEPLOYMENT.md  generate-og-image.mjs  index.html  index.py  package-lock.json  package.json  pyproject.toml  qa-visual-test.mjs  requirements.txt  vercel.json  vite.config.ts
portfolio/api/: _moderation.py  _security.py  _shared.py  chat.py  health.py  index.py  preprocess_cv.py  requirements.txt
portfolio/api/data/: cv_data.json
portfolio/public/: llms.txt  manifest.json  robots.txt  sitemap.xml
portfolio/src/: App.tsx  main.tsx
portfolio/src/components/layout/: MouseGlow.css  MouseGlow.tsx  Navbar.css  Navbar.tsx  index.ts
portfolio/src/components/sections/: About.css  About.tsx  Contact.css  Contact.tsx  Hero.css  Hero.tsx  Journey.css  Journey.tsx  Projects.css  Projects.tsx  Skills.css  Skills.tsx  index.ts
portfolio/src/components/three/: FloatingOrb.tsx  KnowledgeGraph.tsx  NeuralBrain.tsx  index.ts
portfolio/src/components/ui/: AgentConversation.css  AgentConversation.tsx  AnimatedGrid.css  AnimatedGrid.tsx  AppDemo.css  AppDemo.tsx  BlurText.css  BlurText.tsx  Button.css  Button.tsx  ChatDemo.css  ChatDemo.tsx  FerBot.css  FerBot.tsx  HoverCard.css  HoverCard.tsx  LanguageSelector.css  MagneticButton.css  (+11 more)
portfolio/src/data/: portfolio.ts
portfolio/src/hooks/: index.ts  useMousePosition.ts  useScrollAnimation.ts
portfolio/src/i18n/: config.ts
portfolio/src/styles/: animations.css  base.css  variables.css
portfolio/src/types/: index.ts
(+14 files in other folders)
