[project]
name = "ferbot-api"
version = "1.0.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "pydantic>=2.11.0",
    "openai>=1.68.0",
    "groq>=0.9.0",
    "python-dotenv>=1.1.0",
    "httpx>=0.28.0",
    "tiktoken>=0.8.0",
    "numpy>=2.1.0",
]

[project.scripts]
app = "index:app"
